Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Customers__x.object
<CustomObject>
    <description>Customers</description>
    <externalDataSource>NW</externalDataSource>
    <externalName>Customers</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>CompanyName</description>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>CompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>ContactName</description>
        <externalDeveloperName>ContactName</externalDeveloperName>
        <label>ContactName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTitle__c</fullName>
        <description>ContactTitle</description>
        <externalDeveloperName>ContactTitle</externalDeveloperName>
        <label>ContactTitle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>CustomerID</description>
        <externalDeveloperName>CustomerID</externalDeveloperName>
        <label>CustomerID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <externalDeveloperName>Region</externalDeveloperName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Customers</label>
    <pluralLabel>Customers</pluralLabel>
</CustomObject>